--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -123,9 +123,9 @@ Over the past century, human activities have dramatically altered the physical a
 
 The concept of shared stocks was developed following the ratification of the UN on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the UN's Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present on the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Under UNCLOS, countries are responsible for the management of stocks within their EEZs and encouraged to cooperate when stocks are shared  [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
 
-Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
+Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. **Recent studies have looked at global gains (Pinsky et. al., 2018) and losses (Oremus et al., 2020) of transboundary stocks within the world’s EEZs as well as regional sharing dynamics between neighbouring countries (Palacios-Abrantes et al., 2020, Sumaila et al., 2020) towards the end of the century because of climate change. However, previous studies fail to identify changes in the distribution of current transboundary stocks at the global level including the actual timeline of shifts in shared stocks, nor the intensity of such shifts.** Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
-Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We define a ‘stock’ unit as a species shared by neighboring EEZs.** Furthermore, we  developed a Transboundary Shift Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We adopt the definition of a ‘stock’ unit developed and applied in Palacios-Abrantes *et al.* 2020; Teh & Sumaila, 2015, which considers a stock unit as a species shared by neighbouring EEZs.** Furthermore, we  developed a Transboundary Shift Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). **We base our analysis on the 633 transboundary species identified by Palacios-Abrantes (2020) defining a ‘stock’ unit as each time a transboundary species is shared by neighbouring EEZs. By employing the concept of time of emergence, we estimate the year in which the stocks are projected to shift their shared distribution beyond historical variations (Fig. \@ref(fig:toeFigure1N)).** Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. **We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).**
 
 ```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.pos="H", fig.cap =  "Schematic diagram of the transboundary index (TSI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. **Hypothetical distribution range and shape of a shared stock.** The index is based on the distance between the distributional centroid of the transboundary stock and the centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TSI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
 
@@ -152,7 +152,7 @@ grid.raster(img)
 
 ## Databases and species selection
 
-The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. **We define a (transboundary) "stock" unit when a species was shared by a pair of neighboring EEZs [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks.** Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS1)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table \@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
+The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. **We define a (transboundary) "stock" unit when a species was shared by a pair of neighboring EEZs [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks.** **Let us consider the transboundary species Atlantic cod (Gadus morhua) as an example. Atlantic cod’s distribution in the Northwest Atlantic ranges from the United States to Greenland. Based on the previous definition of a transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not share a stock as they do not have juxtaposing EEZs.** We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS1)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table \@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
 
 ## Projecting species distributions under climate change
 
@@ -264,7 +264,6 @@ We tested the results for normality (e.g., skewness, kurtosis) and performed two
 Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), using a two s.d. threshold (i.e., representing a probability of 95% that the stock has shifted). This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). Using a less conservative threshold (i.e., one s.d. representing a probability of 67% that the stock has shifted) **results in 18% (n = 5,745) more shifting stocks, that is, 63% of all studied stocks** (Figs. \@ref(fig:toeFigureS3), \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). For both cases, the first shift is modelled to have occurred back in 2006. The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be between 2029 $\pm$ 27 years (one s.d. threshold) and 2036 $\pm$ 28 years (two s.d. threshold). Furthermore, between 81% and 83% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 77% to 80% of EEZs recording a distributional stock shift by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
 
-
 ```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "Timeline of shifts in transboundary shared stock distribution. (A) Number of stocks (cumulative) whose distribution centroids that have shifted beyond natural variations over time (from 2006 to >2100), (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (Methods), respectively."}
 
 img <- readPNG("../Figures/Fig2.png")
@@ -287,7 +286,8 @@ grid.raster(img)
 We estimated the participation of the transboundary stocks that are shifting between neighboring EEZs relative to the total revenue from all transboundary stocks that each EEZ has. On average, shifting transboundary stocks represented 27% to 23% (1 and 2 s.d. thresholds) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru). 
 
 
-**While the total number of shifting stocks is important for fisheries management, having high-valuable stocks shifting sooner could be a much bigger concern than having many low-value stocks shifting. Thus, we looked at the year of range shift of the top five most valuable transboundary stocks of each country (New Fig 4). On average, countries are projected to see a range shift of the top five most valuable stocks by 2038 $\pm$ 25 years under threshold two (2028 $\pm$ 22 years under threshold one). Moreover, our projections suggest that these high value stocks are already shifting in 52 (27%) coastal nations under threshold two (n = 85 44% under threshold one), with the regions of Latin America and the Caribbean (n = 63), Sub-Saharan Africa (n = 59), South-eastern Asia  (n = 28), and Polynesia (n = 19) presenting the larger number of shifting stocks (25% of total high value stocks).** 
+**While the total number of shifting stocks is important for fisheries management, having more valuable stocks shifting sooner could be a much bigger concern than having many low-value stocks shifting. Thus, we looked at the year of range shift of the top five most valuable transboundary stocks of each country (Fig. \@ref(fig:toeFigure3)). On average, countries are projected to see a range shift of the top five most valuable stocks by 2038 $\pm$ 25 years under threshold two (2028 $\pm$ 22 years under threshold one). Moreover, our projections suggest that these high value stocks are already shifting in 129 (66%) coastal nations under threshold two (n = 154, 79% under threshold one), with the regions of Latin America and the Caribbean (n = 62), Sub-Saharan Africa (n = 36), Polynesia (n = 22), and Southern Europe (n = 19) presenting the larger number of high value shifting stocks (50% of shifting high value stocks).** 
+
 
 
 <!-- We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs for both thresholds (one and two s.d.). Within five years of the UN 2030 Agenda timeline, 979 transboundary stocks accounting for USD 5.3 billion in fishing revenue are projected to shift within 76 EEZs considering a two s.d. threshold (Fig. \@ref(fig:toeFigure3); above Fisheries >75th percentile). In this case, 321 stocks shifting in just eleven countries account for 4.2 billion USD (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)). The values are substantially higher when considering a more relaxed threshold. In this case, 2,136 stocks accounting for USD 24 billion in fishing revenue are projected to shift within five years of the UN 2030 Agenda timeline in 134 EEZs. -->
@@ -345,7 +345,7 @@ The early projected range shifts of large number of transboundary stocks can be 
 
 Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species. Thus, any mitigation efforts could result in a substantial delay in distribution shifts as environmental signals are responsive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process-level understanding. It is unlikely that these complex uncertainties will adequately be addressed in the coming decade. **NOTE OPTION A. Therefore, decision-makers are facing the challenge of taking action under an uncertain future. One strategy for that is adapting scenario planning into fisheries management [@NOAA_scen_plan_2020]. This will allow for managers to integrate the uncertainty into planning for managing fisheries. For example, if stocks are expected to shift their distribution by 2036 $\pm$ 28 years (Fig. 2), managers could prepare for a scenario where stocks are currently changing and another where they will shift in 20 years. Scenario planning can also be used to estimate potential looses in revenue when adaptation to climate change is not developed cooperatively [@Sumaila:2020tp; @Miller:2013iv].** This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, and the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf].
 
-These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (NOTE: See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).** Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
+These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, multiple upper trophic level models present overall agreement in terms of directional change of fish biomass, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, the population structure of most exploited species in the world are poorly- or un- defined [@ref]. Future studies that focus on particular shared stocks could use more specific unit stock definition that is available for the cases.** Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identify different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
 
 **NOTE: OPTION B, From a decision-making point of view, these uncertainties hinder the management of natural resources forcing managers to taking action under an uncertain future. Rather than wait for more certain methods to be developed (in some cases is unlikely that we could develop them in the next decade or so, Forlicher *et al.* 2016), manager could build scenario planning into fisheries management [@NOAA_scen_plan_2020]. This will allow for managers to integrate the uncertainty into planning for managing fisheries. For example, if stocks are expected to shift their distribution by 2036 $\pm$ 28 years (Fig. 2), managers could prepare for a scenario where stocks are currently changing and another where they will shift in 20 years. Scenario planning can also be used to estimate potential looses in revenue when adaptation to climate change is not developed cooperatively [@Sumaila:2020tp; @Miller:2013iv].**
 
